<resources>
    <string name="app_name">AxReg-droid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="forgot_my_password">Esqueci minha senha</string>
    <string name="btn_login">Entrar</string>
    <string name="create_account">CRIAR CONTA</string>
    <string name="password_recovery">Recuperação de senha</string>
    <string name="recovery_txt_report">Informe seu endereço de email e enviaremos para você \n instruções de como redefinir sua senha</string>
    <string name="send_email">ENVIAR EMAIL</string>
    <string name="logoAnestech">Logo Anestech</string>
    <string name="action_news">News</string>
    <string name="action_ads">Comunicados</string>
    <string name="error_empty_fields">Por favor preencha todos campos</string>
    <string name="failure_server">Não foi possivel realizar o login verifique sua conexão com a internet</string>
    <string name="user_password_invalid">Usuário ou Senha inválidos</string>
    <string name="email_sent">Email enviado</string>
    <string name="message_email_sent">Enviamos um email com instruções de como redefinir \n sua senha. Por favor verifique sua caixa de entrada.</string>
    <string name="resend_email">REENVIAR EMAIL</string>
    <string name="title_success">Sucesso</string>
    <string name="msg_email_success">Um novo email foi enviado com sucesso, verifique sua caixa de entrada.</string>
    <string name="ok">OK</string>
    <string name="title_activity_create_account">CreateAccountActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="accoount_creation">Criação de conta</string>
    <string name="personal_data">Informe seus dados pessoais</string>
    <string name="name">Nome</string>
    <string name="cpf">CPF</string>
    <string name="phone">Telefone</string>
    <string name="country">Países</string>
    <string name="date_of_birth">Data de Nascimento</string>
    <string name="access_data">Informe seus dados de acesso</string>
    <string name="confirm_email">Confirmar e-mail</string>
    <string name="password_confirm">Confirme a senha</string>
    <string name="password_information">Sua senha precisa ter 8 caracteres, letras maiúsculas e  minúsculas, pelo  menos um caractere especial e um número.</string>
    <string name="text_terms_use">Ao confirmar o cadastro você concorda com nossos</string>
    <string name="link_terms_use">Termos de Uso e Política de Privacidade</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="error_invalid_cpf">Cpf inválido</string>
    <string name="error_digits_cpf">O cpf precisa ter 11 digitos</string>
    <string name="txt_professional_data">Dados profissionais</string>
    <string name="txt_register_your_subscription">Cadastre sua assinatura ou Rúbrica para impressão</string>
    <string name="crm">Nº CRM</string>
    <string name="txt_institutions_that">Instituições em que atuo</string>
    <string name="txt_selected">Selecionada</string>
</resources>
