<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".fragments.register.AccountCreateStageThreeFragment">


    <TextView
        android:id="@+id/title_professional_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/txt_institutions_that"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner_state"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/gradient_spinner"
        android:minWidth="100dp"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@id/institutionsWrapper"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_professional_data" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/institutionsWrapper"
        style="@style/StyledTilEditText"
        android:layout_width="0dp"
        android:layout_height="61dp"
        android:layout_marginEnd="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="40dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/edit_custom"
        app:hintTextAppearance="@style/Hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinner_state"
        app:layout_constraintTop_toTopOf="@+id/spinner_state">

        <EditText
            android:id="@+id/edt_register_crm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="true"
            android:fontFamily="@font/montserrat"
            android:hint="@string/crm"
            android:inputType="textCapWords"
            android:textAlignment="inherit"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/txt_selected"
        app:layout_constraintStart_toStartOf="@+id/spinner_state"
        app:layout_constraintTop_toBottomOf="@+id/spinner_state" />

</android.support.constraint.ConstraintLayout>